# pineapple-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: backend.h  definitions.h  lexer.h  parser.h
src/: backend.c  definitions.c  lexer.c  main.c  parser.c
